--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Add_two_matrix_multiDimension_Array</name>
+	<name>multily_two_matrix</name>
 	<comment></comment>
 	<projects>
 	</projects>
